[package]
name = "libedgedns"
version = "0.4.0"
authors = ["Frank Denis <github@pureftpd.org>", "Marek Vavrusa <marek@vavrusa.com>"]
publish = false
edition = "2018"

[lib]
name = "libedgedns"
path = "src/lib.rs"

[dependencies]
clippy = {version = "*", optional = true}
failure = "*"
failure_derive = "*"
futures = "*"
lazy_static = "*"
log = "*"
coarsetime = "*"
rand = "^0.6"
toml = "*"
bytes = "*"
stream-cancel = "0.4"
jumphash = {git = "https://github.com/jedisct1/rust-jumphash"}
tokio = {version = "0.1.15", features=["async-await-preview"]}
domain-core = {git = "https://github.com/vavrusa/domain-core", rev = "0e22a1718048ac0c9498fbe0001cd6677cadcfd7"}
kres = {git = "https://github.com/vavrusa/rust-kres", rev = "4d9348eec4bc64f91f5fed3d3b91775cca1f7dc8"}
parking_lot = {version = "0.7"}
clockpro-cache = {git = "https://github.com/vavrusa/rust-clockpro-cache", rev = "cdfb6f2b78d074cdd35b17c79fea2664e695f0e7"}
prometheus = "*"
hex = "0.3"
socket2 = {version = "0.3", features = ["reuseport"]}