[package]
name = "edgedns"
version = "0.4.0"
authors = ["Frank Denis <github@pureftpd.org>", "Marek Vavrusa <marek@vavrusa.com>"]
publish = false
edition = "2018"

[features]
jemalloc = ["jemallocator"]
webservice = ["hyper"]
default = ["jemalloc", "webservice"]

[[bin]]
name = "edgedns"
path = "src/main.rs"

[dependencies]
bytes = "*"
clap = "*"
clippy = {version = "*", optional = true}
coarsetime = "*"
env_logger = "^0.6"
futures = "*"
hyper = {version = "0.12", optional = true}
jemallocator = {version = "*", optional = true}
libedgedns = {version = "0.4.0", path = "../libedgedns"}
log = "*"
mime = "*"
prometheus = "*"
socket2 = {version = "*", features = ["reuseport"]}
stream-cancel = "0.4"
tokio = {version = "0.1.16", features=["async-await-preview"]}
tokio-signal = "0.2"
listenfd = "0.3"