[package]
name = "libedgedns"
version = "0.3.0"
authors = ["Frank Denis <github@pureftpd.org>"]
publish = false
edition = "2018"

[features]
webservice = ["hyper"]
nightly = ["prometheus/nightly"]
jemalloc = ["jemallocator"]

[[bin]]
name = "edgedns"
path = "src/edgedns/main.rs"

[dependencies]
base64 = "*"
bpf = "*"
byteorder = "*"
bytes = "*"
clippy = {version = "*", optional = true}
clockpro-cache = "*"
coarsetime = "*"
dnstap = "*"
dnssector = {git = "https://github.com/jedisct1/dnssector"}
env_logger = "*"
failure = "*"
failure_derive = "*"
futures = "*"
glob = "*"
hyper = {version = "~0.12", optional = true}
mime = "*"
jumphash = {git = "https://github.com/jedisct1/rust-jumphash"}
lazy_static = "*"
libc = "*"
libloading = "*"
log = "*"
net2 = "*"
nix = "~0.8 "
parking_lot = "*"
privdrop = "0.2.1"
prometheus = {git = "https://github.com/pingcap/rust-prometheus", default-features = false}
prost = "*"
prost-derive = "*"
prost-types = "*"
qp-trie = "*"
rand = "*"
siphasher = "*"
slab = "*"
socket-priority = "*"
toml = "*"
unicase = "*"
xfailure = "*"
tokio = { version = "*", features=["async-await-preview"] }
tokio-async-await = { git = "https://github.com/tokio-rs/tokio" }
jemallocator = {version = "*", optional = true}

[build-dependencies]
prost-build = "*"

[profile.release]
debug = true
lto = true
panic = "abort"
opt-level = 3
