[package]
name = "logger"
version = "0.1.0"
authors = ["Marek Vavruša <mvavrusa@cloudflare.com>"]
edition = "2018"
build = "build.rs"
publish = false

[lib]
name = "logger"
crate-type = ["cdylib"]

[dependencies]
futures-preview = { version = "=0.3.0-alpha.13", default-features = false }
wee_alloc = { version = "0.4" }
guest = { path = "../../guest" }
capnp = "0.9"
byteorder = "1"

[build-dependencies]
capnpc = "0.9"

[profile.release]
lto = true
opt-level = 'z'

[workspace]
members = []