[package]
name = "example-app"
version = "0.1.0"
authors = ["Marek Vavruša <mvavrusa@cloudflare.com>"]
edition = "2018"

[lib]
name = "example"
crate-type = ["cdylib"]

[features]
default = ["wee_alloc"]

[dependencies]
futures-preview = { version = "=0.3.0-alpha.12", default-features = false, features = ["nightly"]}
embrio-async = {git = "https://github.com/Nemo157/embrio-rs", rev = "73853731f00b1babefe572fe8b339f188e1a17db"}
wee_alloc = {version = "0.4", optional = true}
guest = {path = "../../guest"}

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'

[workspace]
members = []