[package]
name = "test-app"
version = "0.1.0"
authors = ["Marek Vavruša <mvavrusa@cloudflare.com>"]
edition = "2018"
publish = false

[lib]
name = "test_app"
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
futures-preview = { version = "=0.3.0-alpha.12", default-features = false, features = ["nightly"]}
guest = {path = "../../../../sandbox/guest"}

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'

[workspace]
members = []